# retro-games

./: .clang-format  CMakeLists.txt  Makefile  README.md
src/: pong.c  snake.c
